[change] changed image generation from pretrained model to match the other branches

--- a/generate_images_pretrained.ipynb
+++ b/generate_images_pretrained.ipynb
@@ -13,16 +13,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from datetime import datetime\n",
-    "from torchvision.utils import save_image\n",
+    "from torchvision import transforms\n",
+    "from torchvision.utils import make_grid\n",
     "\n",
     "from pl_module import PL_Module\n",
-    "from model import Generator, Critic\n"
+    "from model import Generator, Critic"
    ]
   },
   {
@@ -51,50 +50,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Utility functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_model(path, device):\n",
-    "    # create module\n",
-    "    generator = Generator(nz=nz, ngf=ngf)\n",
-    "    critic = Critic(ndf=ndf)\n",
-    "\n",
-    "    module = PL_Module(generator, critic, None, None, None, nz, 16)\n",
-    "\n",
-    "    # load checkpoint\n",
-    "    checkpoint = torch.load(path, map_location=device)\n",
-    "    state_dict = checkpoint['state_dict']\n",
-    "    \n",
-    "    # load pretrained weights into generator model\n",
-    "    module.load_state_dict(state_dict)\n",
-    "    \n",
-    "    generator = module.generator\n",
-    "\n",
-    "    # set generator to evaluation mode\n",
-    "    generator.eval().to(device)\n",
-    "\n",
-    "    return generator\n",
-    "\n",
-    "def generate_image(generator, nz, device):\n",
-    "    with torch.no_grad():\n",
-    "        # noise input vector\n",
-    "        z = torch.randn((1, nz, 1, 1), device=device)\n",
-    "\n",
-    "        generated_image = generator(z)\n",
-    "\n",
-    "    return generated_image"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Initialization"
    ]
   },
@@ -104,7 +59,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generator = load_model(weights_path, device)"
+    "# reverse normalization to generate images in original scope\n",
+    "reverse_normalize = transforms.Compose([\n",
+    "    transforms.Normalize(mean=[0, 0, 0], std=[1/0.5, 1/0.5, 1/0.5]),\n",
+    "    transforms.Normalize(mean=[-0.5, -0.5, -0.5], std=[1, 1, 1])\n",
+    "])\n",
+    "\n",
+    "# create models\n",
+    "generator = Generator(nz=nz, ngf=ngf)\n",
+    "critic = Critic(ndf=ndf)\n",
+    "\n",
+    "# create module to load in the weights\n",
+    "module = PL_Module(generator, critic, None, None, None, nz, 16)\n",
+    "\n",
+    "# load checkpoint\n",
+    "checkpoint = torch.load(weights_path, map_location=device)\n",
+    "state_dict = checkpoint['state_dict']\n",
+    "\n",
+    "# load weights\n",
+    "module.load_state_dict(state_dict)\n",
+    "\n",
+    "generator = module.generator\n",
+    "\n",
+    "# set generator to eval mode\n",
+    "generator.eval().to(device)"
    ]
   },
   {
@@ -115,22 +93,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate images using the generator model (you can execute over and over to generate different images)\n",
-    "generated_image = generate_image(generator, nz, device)\n",
+    "# input noise vector\n",
+    "z = torch.randn((1, nz, 1, 1), device=device)\n",
     "\n",
-    "plt.imshow(generated_image[0].permute(1, 2, 0).cpu())"
+    "# generate image\n",
+    "with torch.no_grad():\n",
+    "    generated_image = generator(z)\n",
+    "\n",
+    "generate_image = reverse_normalize(generated_image[0])\n",
+    "\n",
+    "# display image\n",
+    "plt.imshow(generated_image[0].permute(1, 2, 0).cpu())\n",
+    "plt.axis('off')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save current image"
+    "### Grid"
    ]
   },
   {
@@ -139,11 +132,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the current image in the ./data/output folder using the timestamp as filename\n",
-    "output_path = f\"./data/output/{datetime.now().strftime('%Y-%m-%d_%H-%M-%S')}.png\"\n",
-    "os.makedirs(os.path.dirname(output_path), exist_ok=True)\n",
+    "# number of images for grid (6x6)\n",
+    "n = 6\n",
     "\n",
-    "save_image(generated_image, output_path)"
+    "# input noise vector\n",
+    "z = torch.randn((n*n, nz, 1, 1), device=device)\n",
+    "\n",
+    "# generate images\n",
+    "with torch.no_grad():\n",
+    "    generated_images = generator(z)\n",
+    "\n",
+    "# create grid of images\n",
+    "grid = make_grid(generated_images, nrow=n, normalize=True).permute(1, 2, 0).cpu()\n",
+    "\n",
+    "# display the grid\n",
+    "plt.imshow(grid)\n",
+    "plt.axis('off')"
    ]
   }
  ],
