[add] updated README with images and fixt the train notebook

--- a/train.ipynb
+++ b/train.ipynb
@@ -35,6 +35,7 @@
     "    checkpoint_save_weights_only=True\n",
     ")\n",
     "\n",
+    "mlflow.end_run()\n",
     "mlflow.set_experiment(\"wgan\")\n",
     "mlflow.start_run()"
    ]
