--- a/train.ipynb
+++ b/train.ipynb
@@ -53,23 +53,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parameters\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "n_workers = 4\n",
+    "n_valid = 16\n",
     "\n",
+    "data_path = \"./data/train/dataset\"\n",
+    "\n",
+    "# hyperparameters\n",
     "epochs = 100\n",
     "batch_size = 16\n",
     "\n",
     "lr = 0.0002\n",
     "betas = (0.5, 0.999)\n",
     "\n",
+    "# model parameters\n",
     "nz = 100\n",
     "ngf = 64\n",
-    "ndf = 64\n",
-    "\n",
-    "data_path = \"./data/train/dataset\"\n",
-    "\n",
-    "n_valid = 16"
+    "ndf = 64"
    ]
   },
   {
@@ -127,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
