[change] update README hyperparameters and changed comments

--- a/train.ipynb
+++ b/train.ipynb
@@ -53,10 +53,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parameters\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "n_workers = 4\n",
+    "n_valid = 16\n",
     "\n",
+    "data_path = \"./data/train/dataset\"\n",
+    "\n",
+    "# hyperparameters\n",
     "epochs = 100\n",
     "batch_size = 16\n",
     "\n",
@@ -64,13 +69,10 @@
     "betas = (0.5, 0.999)\n",
     "lambda_gp = 10\n",
     "\n",
+    "# model parameters\n",
     "nz = 100\n",
     "ngf = 64\n",
-    "ndf = 64\n",
-    "\n",
-    "data_path = \"./data/train/dataset\"\n",
-    "\n",
-    "n_valid = 16"
+    "ndf = 64"
    ]
   },
   {
