[change] update README hyperparameters and changed comments

--- a/train.ipynb
+++ b/train.ipynb
@@ -54,10 +54,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parameters\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "n_workers = 4\n",
+    "n_valid = 16\n",
     "\n",
+    "data_path = './data/train/dataset/'\n",
+    "\n",
+    "num_inference_timesteps = 1000\n",
+    "\n",
+    "# hyperparameters\n",
     "epochs = 100\n",
     "batch_size = 8\n",
     "\n",
@@ -65,15 +72,11 @@
     "betas = (0.95, 0.999)\n",
     "beta_schedule = 'linear'\n",
     "\n",
-    "nc = 3\n",
-    "image_size = (64, 64)\n",
-    "\n",
     "num_train_timesteps = 1000\n",
-    "num_inference_timesteps = 1000\n",
     "\n",
-    "data_path = './data/train/dataset/'\n",
-    "\n",
-    "n_valid = 16"
+    "# model parameters\n",
+    "nc = 3\n",
+    "image_size = (64, 64)"
    ]
   },
   {
