[change] cleaned imports and finished readme

--- a/generate_images_pretrained.ipynb
+++ b/generate_images_pretrained.ipynb
@@ -18,9 +18,7 @@
     "\n",
     "from torchvision.utils import make_grid\n",
     "\n",
-    "from pl_module import PL_Module\n",
-    "\n",
-    "from diffusers import DDPMPipeline, UNet2DModel, DDPMScheduler"
+    "from diffusers import DDPMPipeline"
    ]
   },
   {
