[change] removed single image generation, instead use grid...

--- a/generate_images_pretrained.ipynb
+++ b/generate_images_pretrained.ipynb
@@ -16,7 +16,6 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from torchvision import transforms\n",
     "from torchvision.utils import make_grid\n",
     "\n",
     "from pl_module import PL_Module\n",
@@ -58,12 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reverse normalization to generate images in original scope\n",
-    "reverse_normalize = transforms.Compose([\n",
-    "    transforms.Normalize(mean=[0, 0, 0], std=[1/0.5, 1/0.5, 1/0.5]),\n",
-    "    transforms.Normalize(mean=[-0.5, -0.5, -0.5], std=[1, 1, 1])\n",
-    "])\n",
-    "\n",
     "# create models\n",
     "generator = Generator(nz=nz, ngf=ngf)\n",
     "critic = Critic(ndf=ndf)\n",
@@ -95,33 +88,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input noise vector\n",
-    "z = torch.randn((1, nz, 1, 1), device=device)\n",
-    "\n",
-    "# generate image\n",
-    "with torch.no_grad():\n",
-    "    generated_image = generator(z)\n",
-    "\n",
-    "generate_image = reverse_normalize(generated_image[0])\n",
-    "\n",
-    "# display image\n",
-    "plt.imshow(generated_image[0].permute(1, 2, 0).cpu())\n",
-    "plt.axis('off')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Grid"
    ]
   },
@@ -131,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# number of images for grid (6x6)\n",
+    "# number of images for grid (6x6), change n to 1 for single image generation\n",
     "n = 6\n",
     "\n",
     "# input noise vector\n",
