[change] removed single image generation, instead use grid...

--- a/generate_images_pretrained.ipynb
+++ b/generate_images_pretrained.ipynb
@@ -79,27 +79,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "images = pipeline(1, generator, num_inference_steps, \"numpy\").images\n",
-    "\n",
-    "image = images[0]\n",
-    "\n",
-    "plt.imshow(image)\n",
-    "plt.axis('off')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Grid"
    ]
   },
@@ -109,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grid size (6x6)\n",
+    "# grid size (6x6), change n to 1 for single image generation\n",
     "n = 6\n",
     "\n",
     "images = pipeline(n*n, generator, num_inference_steps, \"numpy\").images\n",
